[package]
name = "ssd1351"
version = "0.2.0"
authors = ["Scott Mabin <mabez123@gmail.com>"]
description = "Driver crate for the SSD1351 16bit colour OLED display driver."
keywords = ["no-std", "ssd1351", "oled", "embedded", "embedded-hal-driver"]
repository = "https://github.com/MabezDev/ssd1351"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]

[dependencies]
embedded-graphics = { version = "0.4.4", optional = true }

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[dev-dependencies.stm32l4xx-hal]
version = "0.3.5"
features = ["stm32l4x2", "rt"]

[dev-dependencies]
panic-semihosting = "0.5.1"
cortex-m-semihosting = "0.3.2"
cortex-m = "0.5.8"
nb = "0.1.1"
cortex-m-rt = "0.6.7"
heapless = "0.4.1"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
buffered = []
