[package]
name = "ssd1351"
version = "0.4.2"
authors = ["Scott Mabin <mabez123@gmail.com>"]
description = "Driver crate for the SSD1351 16bit colour OLED display driver."
keywords = ["no-std", "ssd1351", "oled", "embedded", "embedded-hal-driver"]
edition = "2021"
repository = "https://github.com/MabezDev/ssd1351"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]

[dependencies]
embedded-graphics-core = { version = "0.4", optional = true }

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]

[dev-dependencies.stm32l4xx-hal]
version = "0.7"
features = ["stm32l432", "rt"]

[dev-dependencies]
panic-semihosting = "0.6"
cortex-m-semihosting = "0.5"
cortex-m = "0.7"
nb = "0.1.1"
cortex-m-rt = "0.7"
heapless = "0.7"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]
buffered = []
