[package]
name = "ssd1351"
version = "0.5.0"
authors = ["Scott Mabin <mabez123@gmail.com>"]
description = "Driver crate for the SSD1351 16bit colour OLED display driver."
keywords = ["no-std", "ssd1351", "oled", "embedded", "embedded-hal-driver"]
edition = "2021"
repository = "https://github.com/MabezDev/ssd1351"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]
buffered = []

[dependencies]
embedded-graphics-core = { version = "0.4", optional = true }
embedded-hal = { version = "1.0.0" }
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
